--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,6 +115,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     transition: left 0.4s;
   }
 
