--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,3 @@
-/*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /*=============== VARIABLES CSS ===============*/
 :root {
@@ -45,7 +44,7 @@ html {
 body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  /* background-color: white; */
+  background-color: white;
 }
 
 ul {
@@ -111,11 +110,10 @@ a {
     background-color: white;
     width: 100%;
     height: 100%;
-    padding: 20rem 3.5rem 6rem;
+    padding: 6rem 3.5rem 4.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     transition: left 0.4s;
   }
 
@@ -271,7 +269,3 @@ a {
     column-gap: 3.5rem;
   }
 }
-
-
-
-
