--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,24 +184,6 @@ a {
   transition: width 0.4s ease-out;
 }
 
-/* Animation link on hover */
-.nav__link:hover span {
-  margin-left: 2.5rem;
-}
-
-.nav__link:hover i {
-  opacity: 1;
-  visibility: visible;
-}
-
-.nav__link:hover span::after {
-  width: 100%;
-}
-
-/* Sibling fade animation */
-.nav__list:has(.nav__link:hover) .nav__link:not(:hover) {
-  opacity: 0.4;
-}
 
 .nav__close {
   position: absolute;
@@ -269,3 +251,177 @@ a {
     column-gap: 3.5rem;
   }
 }
+
+/* main {
+  padding-top: calc(var(--header-height) + 40px); 
+} */
+
+.slider-ctr {
+  width: 1000px;
+  height: 600px;
+  position: absolute;
+  top: 50%; /* Position at 50% from the top */
+  left: 50%; /* Position at 50% from the left */
+  transform: translate(-50%, -50%); /* Move the element back by 50% of its own width and height */
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 10px 15px 3px rgba(0, 0, 0, .15), 0 5px 20px 3px rgba(0, 0, 0, .1);
+}
+
+.slider-ctr:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.6) 100%);
+  background: -webkit-linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.6) 100%);
+  pointer-events: none;
+  z-index: 9;
+}
+
+.slider-control {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 80px;
+  overflow: hidden;
+  border-radius: 3px;
+  box-shadow: 0 3px 3px 3px rgba(0, 0, 0, .15);
+  z-index: 99;
+}
+
+.slider-control .control {
+  width: 50%;
+  height: 40px;
+  display: block;
+  float: left;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
+  transition: .3s all ease;
+  background: white;
+}
+
+.slider-control .control .icon {
+  pointer-events: none;
+  transition: .3s all ease;
+}
+
+.slider-control .control.disabled {
+  pointer-events: none;
+  background: white;
+}
+
+.slider-control .control.disabled .icon {
+  opacity: .5;
+}
+
+.slide {
+  position: absolute;
+  width: 100%; /* Adjust the width as needed */
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: .45s all cubic-bezier(0.65, 0.05, 0.36, 1);
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+}
+
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .125);
+}
+
+.slide.slide-on {
+  -webkit-clip-path: inset(0 100% 0 0);
+  clip-path: inset(0 100% 0 0);
+}
+
+.slide.text-on .title,
+.slide.text-on .author {
+  transition-delay: .45s;
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+}
+
+.slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slide figcaption {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  bottom: 30px;
+  left: 30px;
+}
+
+.slide .title {
+  font-size: 50px;
+  margin-bottom: 2px;
+  color: white;
+  transition: .3s all cubic-bezier(0.65, 0.05, 0.36, 1);
+  -webkit-clip-path: inset(0 0 0 100%);
+  clip-path: inset(0 0 0 100%);
+  font-weight: 400;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.slide .author {
+  font-size: 16px;
+  color: white;
+  opacity: .8;
+  transition: .3s all cubic-bezier(0.65, 0.05, 0.36, 1);
+  -webkit-clip-path: inset(0 0 0 100%);
+  clip-path: inset(0 0 0 100%);
+  font-weight: 300;
+  letter-spacing: 3px;
+  position: relative;
+  z-index: 9;
+}
+
+/* Media Queries */
+@media screen and (max-width: 1200px) {
+  .slider-ctr {
+    width: 100%; /* Adjust the width to fill out the page */
+    height: 500px; /* Adjust the height as needed */
+    max-width: 100%; /* Set maximum width to ensure responsiveness */
+    max-height: 500px; /* Set maximum height to maintain aspect ratio */
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .slider-ctr {
+    width: 100%; /* Adjust the width to fill out the page */
+    height: 400px; /* Adjust the height as needed */
+    max-width: 100%; /* Set maximum width to ensure responsiveness */
+    max-height: 400px; /* Set maximum height to maintain aspect ratio */
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .slider-ctr {
+    width: 100%; /* Adjust the width to fill out the page */
+    height: 300px; /* Adjust the height as needed */
+    max-width: 100%; /* Set maximum width to ensure responsiveness */
+    max-height: 300px; /* Set maximum height to maintain aspect ratio */
+  }
+}
+
+
+
+
