--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
@@ -52,7 +53,37 @@ ul {
 }
 
 a {
+  color: #111;
   text-decoration: none;
+  text-transform: uppercase;
+  font-size: 0.7em;
+  letter-spacing: 1px;
+  transition: 0.3s;
+}
+
+span { 
+  text-transform: uppercase;
+  font-size: 0.7em;
+  font-weight: 700;
+  transition: 0.3s;
+}
+
+p {
+  color: #949494;
+  font-size: 0.8em;
+  line-height: 30px;
+  letter-spacing: 1px;
+}
+
+h1 {
+  font-size: 3.3em;
+  line-height: 1.3em;
+}
+
+main {
+  padding: var(--spacing);
+  background: #fff;
+  margin-top: 100px;
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
@@ -62,15 +93,6 @@ a {
 }
 
 /*=============== HEADER & NAV ===============*/
-.header {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background-color: white;
-  z-index: var(--z-fixed);
-}
-
 .nav {
   position: relative;
   height: var(--header-height);
@@ -115,6 +137,7 @@ a {
     flex-direction: column;
     justify-content: space-between;
     transition: left 0.4s;
+    z-index: 9; /* Ensure it covers other content */
   }
 
   .nav__item {
@@ -183,7 +206,6 @@ a {
   background-color: var(--white-color);
   transition: width 0.4s ease-out;
 }
-
 
 .nav__close {
   position: absolute;
@@ -256,245 +278,162 @@ a {
   padding-top: calc(var(--header-height) + 40px); 
 } */
 
-.slider-ctr {
-  width: 1000px;
-  height: 600px;
-  position: absolute;
-  top: 50%; /* Position at 50% from the top */
-  left: 50%; /* Position at 50% from the left */
-  transform: translate(-50%, -50%); /* Move the element back by 50% of its own width and height */
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0 10px 15px 3px rgba(0, 0, 0, .15), 0 5px 20px 3px rgba(0, 0, 0, .1);
+.header-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 3em;
+  justify-content: center;
+  align-content: center;
 }
 
-.slider-ctr:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.6) 100%);
-  background: -webkit-linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.6) 100%);
-  pointer-events: none;
-  z-index: 9;
+.header-body > div {
+  margin: 0 var(--spacing);
 }
 
-.slider-control {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  width: 80px;
-  overflow: hidden;
-  border-radius: 3px;
-  box-shadow: 0 3px 3px 3px rgba(0, 0, 0, .15);
-  z-index: 99;
-}
-
-.slider-control .control {
-  width: 50%;
-  height: 40px;
-  display: block;
-  float: left;
-  text-align: center;
-  line-height: 40px;
-  cursor: pointer;
-  transition: .3s all ease;
-  background: white;
-}
-
-.slider-control .control .icon {
-  pointer-events: none;
-  transition: .3s all ease;
-}
-
-.slider-control .control.disabled {
-  pointer-events: none;
-  background: white;
-}
-
-.slider-control .control.disabled .icon {
-  opacity: .5;
-}
-
-.slide {
-  position: absolute;
-  width: 100%; /* Adjust the width as needed */
-  height: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  transition: .45s all cubic-bezier(0.65, 0.05, 0.36, 1);
-  -webkit-clip-path: inset(0 0 0 0);
-  clip-path: inset(0 0 0 0);
-}
-
-.slide:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, .125);
-}
-
-.slide.slide-on {
-  -webkit-clip-path: inset(0 100% 0 0);
-  clip-path: inset(0 100% 0 0);
-}
-
-.slide.text-on .title,
-.slide.text-on .author {
-  transition-delay: .45s;
-  -webkit-clip-path: inset(0 0 0 0);
-  clip-path: inset(0 0 0 0);
-}
-
-.slide img {
-  display: block;
+.slider img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
-.slide figcaption {
+.slider {
+  position: relative; 
+}
+
+.overlay {
   position: absolute;
-  top: 30px;
-  right: 30px;
-  bottom: 30px;
-  left: 30px;
+  background: #fff;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  animation: slide3;
+  z-index: 0;
 }
 
-.slide .title {
-  font-size: 50px;
-  margin-bottom: 2px;
-  color: white;
-  transition: .3s all cubic-bezier(0.65, 0.05, 0.36, 1);
-  -webkit-clip-path: inset(0 0 0 100%);
-  clip-path: inset(0 0 0 100%);
-  font-weight: 400;
-  letter-spacing: 10px;
-  text-transform: uppercase;
-  position: relative;
+.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.slide .author {
-  font-size: 16px;
-  color: white;
-  opacity: .8;
-  transition: .3s all cubic-bezier(0.65, 0.05, 0.36, 1);
-  -webkit-clip-path: inset(0 0 0 100%);
-  clip-path: inset(0 0 0 100%);
-  font-weight: 300;
-  letter-spacing: 3px;
-  position: relative;
-  z-index: 9;
+.text > div {
+  max-width: 27em;
 }
 
-/* Media Queries */
-@media screen and (max-width: 1200px) {
-  .slider-ctr {
-    width: 100%; /* Adjust the width to fill out the page */
-    height: 500px; /* Adjust the height as needed */
-    max-width: 100%; /* Set maximum width to ensure responsiveness */
-    max-height: 500px; /* Set maximum height to maintain aspect ratio */
-  }
-  .slide figcaption {
-    top: 20px;
-    right: 20px;
-    bottom: 20px;
-    left: 20px;
-  }
-
-  .slide .title {
-    font-size: 40px;
-  }
-
-  .slide .author {
-    font-size: 14px;
-  }
-}
-  
-
-@media screen and (max-width: 768px) {
-  .slider-ctr {
-    width: 100%; /* Adjust the width to fill out the page */
-    height: 400px; /* Adjust the height as needed */
-    max-width: 100%; /* Set maximum width to ensure responsiveness */
-    max-height: 400px; /* Set maximum height to maintain aspect ratio */
-  }
-  .slide figcaption {
-    top: 15px;
-    right: 15px;
-    bottom: 15px;
-    left: 15px;
-  }
-
-  .slide .title {
-    font-size: 30px;
-  }
-
-  .slide .author {
-    font-size: 12px;
-  }
+.text p {
+  background-image: linear-gradient(0deg, var(--accent), var(--accent));
+  background-repeat: no-repeat;
+  background-size: 3px 100%;
+  padding-left: var(--spacing);
+  background-position: 0 0;
 }
 
-@media screen and (max-width: 576px) {
-  .slider-ctr {
-    width: 100%; /* Adjust the width to fill out the page */
-    height: 300px; /* Adjust the height as needed */
-    max-width: 100%; /* Set maximum width to ensure responsiveness */
-    max-height: 300px; /* Set maximum height to maintain aspect ratio */
-  }
-  .slide figcaption {
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-    left: 10px;
-  }
-
-  .slide .title {
-    font-size: 20px;
-  }
-
-  .slide .author {
-    font-size: 10px;
-  }
-
+.social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-@media screen and (max-width: 915px) and (orientation: landscape) {
-  .slider-ctr {
-    height: 80vh; /* Adjust height as needed */
-  }
-  .slide figcaption {
-    /* Adjust positioning for landscape orientation */
-  }
-  /* Adjust other styles as needed */
+.social li {
+  margin: 1.5em 0;
+  writing-mode: vertical-rl;
+  font-weight: 700;
 }
 
-@media screen and (max-width: 768px) and (orientation: landscape) {
-  .slider-ctr {
-    height: 60vh; /* Adjust height as needed */
-  }
-  .slide figcaption {
-    /* Adjust positioning for landscape orientation */
-  }
-  /* Adjust other styles as needed */
+.header-bottom {
+  margin: var(--spacing) 0 0 0;
 }
 
-@media screen and (max-width: 576px) and (orientation: landscape) {
-  .slider-ctr {
-    height: 40vh; /* Adjust height as needed */
-  }
-  .slide figcaption {
-    /* Adjust positioning for landscape orientation */
-  }
-  /* Adjust other styles as needed */
+.active {
+  color: var(--accent);
+  background-image: linear-gradient(0deg, var(--accent), var(--accent));
 }
 
+.controls span {
+  margin: 0 0.5em;
+}
 
+@media screen and (max-width: 1000px) {
+  .menu-btn {
+    display: block;
+  }
+  nav .menu {
+    background: #fff;
+    position: absolute;
+    left: 0;
+    top: 5em;
+    width: 100%;
+    height: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    transition: 0.6s;
+    overflow: hidden;
+    z-index: 9;
+  }
+  /*Open Class For Javascript Toggle*/
+  nav .menu-open {
+    opacity: 1;
+    height: 85%;
+    overflow: visible;
+  }
+  nav .menu li {
+    margin: 1em 0;
+  }
+  form:not(.form-mobile) {
+    display: none;
+  }
+  .form-mobile {
+    display: block;
+    margin-top: 1.6em;
+  }
+}
 
+@media screen and (max-width: 850px) {
+  main {
+    height: initial;
+  }
+  .header-body  {
+    grid-template-columns: 1fr;
+  }
+  .header-body > div:not(.slider) {
+    margin: var(--spacing) 0;
+  }
+  .slider {
+    margin: var(--spacing) 0;
+  }
+  .pagination {
+    display: none;
+  }
+  .social {
+    flex-direction: row;
+    margin-top: 15px;
+  }
+  .social li {
+    margin: 0 1.5em;
+    writing-mode: initial;
+  }
+}
+
+@media screen and (max-height: 430px) {
+  main .menu-open {
+    height: 600px;
+  }
+}
+
+/*Animations*/
+@keyframes slide1 {
+  0% { height: 0; }
+  100% { height: 70%; }
+}
+
+@keyframes slide2 {
+  0% { height: 0; }
+  100% { height: 12em; }
+}
+
+@keyframes slide3 {
+  0% { height: 100%; }
+  100% { height: 0; }
+}
