--- a/gallery.css
+++ b/gallery.css
@@ -438,79 +438,110 @@ main {
   100% { height: 0; }
 }
 
-.masonry {
-	columns: 4;
-	column-gap: 16px;
+.container{
+  max-width: 1140px;
+  margin: auto;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section-title{
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 40px;
+}
+.section-title h1{
+  display: inline-block;
+  font-size: 35px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #000000;
+  margin: 0 0 5px;
+  position: relative;
+}
+.section-title h1:before{
+  content: '';
+  left: 0;
+  position: absolute;
+  height: 2px;
+  right: 32%;
+  background-color: #febd01;
+  bottom: 0px;
+}
+.text-center{
+  text-align: center!important;
+}
+.text-right{
+  text-align: right!important;
+}
+.portfolio{
+  background-color: white;
+  padding: 100px 7px;
+}
+.portfolio .section-title h1:before{
+  left: 30%;
+}
+.portfolio .filter-buttons{
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 20px;
+}
+.portfolio .filter-buttons ul{
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+.portfolio .filter-buttons ul li{
+  color: #000000;
+  font-weight: 500;
+  font-size: 16px;
+  display: inline-block;
+  margin: 0px 8px;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-bottom: 0px;
+}
+.portfolio .filter-buttons ul li.active{
+  color: #febd01;
+  border-bottom: 2px solid #febd01;
+}
+.portfolio .portfolio-gallery{
+  flex: 0 0 100%;
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio .portfolio-gallery .item{
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  position: relative;
+  padding: 8px;
+
+}
+.portfolio .portfolio-gallery .item .inner{
+  position: relative;
+}
+.portfolio .portfolio-gallery .item img{
+  width: 100%;
+  display: block;
+}
+
+@media(max-width:767px){
+
+  .portfolio .portfolio-gallery .item{
+      flex:0 0 50% ;
+      max-width: 50%;
+      position: relative;
+      padding:8px ;
   }
-  
-  @media (max-width: 1200px) {
-	.masonry {
-	  columns: 4;
-	}
-  }
-  
-  @media (max-width: 992px) {
-	.masonry {
-	  columns: 23;
-	}
-  }
-  
-  .masonry {
-	@media (max-width: 768px) {
-	  columns: 2;
-	}
-  }
-  
-  .masonry .grid {
-	display: inline-block;
-	margin-bottom: 20px;
-	position: relative;
-	width: 100%;
-  }
-  
-  .masonry .grid:before {
-	border-radius: 5px;
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-color: rgba(0, 0, 0, 0.2);
-  }
-  
-  .masonry .grid img {
-	width: 100%;
-	border-radius: 5px;
-  }
-  
-  .masonry .grid__title {
-	font-size: 30px;
-	font-weight: bold;
-	margin: 0px 0px 10px 0px;
-  }
-  
-  .masonry .grid__link {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-  }
-  
-  .masonry .grid__body {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	padding: 30px 30px;
-	color: #fff;
-	display: flex;
-	flex-direction: column;
-  }
-  
-  .mt-auto {
-	margin-top: auto;
-  }
+
+}
+@media(max-width:500px){
+
+  .portfolio .portfolio-gallery .item{
+      flex:0 0 100% ;
+      max-width: 100%; }
+}
   
