--- a/gallery.css
+++ b/gallery.css
@@ -123,6 +123,7 @@ main {
 @media screen and (max-width: 1150px) {
   .nav__logo img {
     margin-top: 10px;
+    margin-left: 10px;
   }
 
   .nav__menu {
@@ -138,6 +139,10 @@ main {
     justify-content: space-between;
     transition: left 0.4s;
     z-index: 9; /* Ensure it covers other content */
+  }
+
+  .nav__toggle {
+    margin-right: 15px;
   }
 
   .nav__item {
@@ -451,6 +456,7 @@ main {
   flex: 0 0 100%;
   max-width: 100%;
   margin-bottom: 40px;
+  margin-top: -70px;
 }
 .section-title h1{
   display: inline-block;
